issue #224 - Added support of java9 module