@@ -11,6 +11,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>maven-confluence-core</artifactId>
     <name>CONFLUENCE-REPORTING::Core</name>
+    <description>maven confluence plugin - core project</description>
+    <url>http://code.google.com/p/maven-confluence-plugin/</url>
 
     <scm>
         <connection>scm:git:https://github.com/bsorrentino/maven-confluence-reporting-plugin.git</connection>
@@ -20,8 +22,6 @@
         <tag>HEAD</tag>
     </scm>
 
-    <description>maven confluence plugin - core project</description>
-    <url>http://code.google.com/p/maven-confluence-plugin/</url>
     <developers>
         <developer>
             <id>bsorrentino</id>
@@ -156,21 +156,52 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>compile-java-8</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
+                            </compileSourceRoots>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-java-9</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>9</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
+                                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                            </compileSourceRoots>
+                            <compilerArgs>
+                                <arg>--add-modules=java.xml.bind</arg>
+                            </compilerArgs>
+                            <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
 
     </build>
 
-    <dependencyManagement>
-        <dependencies>
-        </dependencies>
-    </dependencyManagement>
-
     <profiles>
 
         <profile>
-            <id>java11</id>
+            <id>java9above</id>
             <activation>
-                <jdk>11</jdk>
+                <jdk>[9,)</jdk>
             </activation>
 
             <dependencies>
